--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -16,7 +16,6 @@
 
 .header a:hover {
   color: #ffe033;
-  ;
 }
 
 .nav-list {
@@ -84,13 +83,13 @@ nav ul li a {
   display: flex;
   align-items: center;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1);
-  z-index: 1000;
+  z-index: 40;
   background-color: #471aa0;
 }
 
 .li-text {
   color: white;
-  font-family: 'Amatic SC', cursive;
+  font-family: "Amatic SC", cursive;
   font-size: 48px;
 }
 
